Fix vertical alignment for list item number/bullet

--- a/src/stylesheets/components/core/_core.scss
+++ b/src/stylesheets/components/core/_core.scss
@@ -449,6 +449,7 @@ li {
 	list-style-type: none;
 	padding-left: 40px;
 	margin-left: -40px;
+	line-height: 1.5;
 }
 
 ol > li::before {
